kubernetes/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-pedido
  labels:
    name: ms-pedido
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-pedido
  template:
    metadata:
      labels:
        app: ms-pedido
    spec:
      containers:
      - name: ms-pedido
        image: pabloldias/soat1-grupo18-ms-pedido:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "384Mi"
            cpu: "2000m"
        ports:
        - containerPort: 8080
