kubernetes/services-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-pedido
  labels:
    app: ms-pedido
spec:
  selector:
    app: ms-pedido
  ports:
  - port: 80
    targetPort: 8082
  type: ClusterIP
