kubernetes/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-api
  labels:
    app: food-api
  annotations:
    # docs: https://github.com/kubernetes/ingress-nginx/blob/main/docs/examples/rewrite/README.md
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  # ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /food-api(/|$)(.*)
        backend:
          service:
            name: food-api
            port: 
              number: 80
